Extreme Gradient Boosted Trees Updated

--- a/Data Analysis/Extreme Gradient Boosted Trees.ipynb
+++ b/Data Analysis/Extreme Gradient Boosted Trees.ipynb
@@ -137,12 +137,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# Utility"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(pred, true, outcome):\n",
+    "    print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(pred[:,outcome], true[:,outcome])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +191,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -296,7 +315,7 @@
        " 'n_random_state': 140}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +374,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +394,7 @@
        "{'learning_rate': 0.1, 'subsample': 0.75}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +432,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +452,7 @@
        "{'learning_rate': 0.1, 'subsample': 1}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +490,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +510,7 @@
        "{'learning_rate': 0.2, 'subsample': 1}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.995569%\n",
+      "Explained Variance Score: 99.995569%\n",
       "Mean Absolute Error: 0.578679\n",
       "Mean Squared Error: 0.000015\n"
      ]
@@ -556,32 +575,7 @@
    "source": [
     "# Frequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.925420%\n",
-      "Mean Absolute Error: 0.057078\n",
-      "Mean Squared Error: 0.000032\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Max Deflection Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode1, y_test, 0)"
    ]
   },
   {
@@ -593,7 +587,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 90.237347%\n",
+      "Explained Variance Score: 99.925420%\n",
+      "Mean Absolute Error: 0.057078\n",
+      "Mean Squared Error: 0.000032\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode1, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 90.237347%\n",
       "Mean Absolute Error: 0.184753\n",
       "Mean Squared Error: 0.000588\n"
      ]
@@ -602,9 +617,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode1, y_test, 2)"
    ]
   },
   {
@@ -616,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +693,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,14 +729,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.995034%\n",
+      "Explained Variance Score: 99.995034%\n",
       "Mean Absolute Error: 0.626202\n",
       "Mean Squared Error: 0.000015\n"
      ]
@@ -732,32 +745,7 @@
    "source": [
     "# Requency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.921480%\n",
-      "Mean Absolute Error: 0.059166\n",
-      "Mean Squared Error: 0.000033\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Max Deflection Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode2, y_test, 0)"
    ]
   },
   {
@@ -769,7 +757,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 90.237347%\n",
+      "Explained Variance Score: 99.921480%\n",
+      "Mean Absolute Error: 0.059166\n",
+      "Mean Squared Error: 0.000033\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode2, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 90.237347%\n",
       "Mean Absolute Error: 0.184753\n",
       "Mean Squared Error: 0.000588\n"
      ]
@@ -778,9 +787,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode2, y_test, 2)"
    ]
   },
   {
@@ -794,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +898,7 @@
        "4    0.5  63  510     5    468.260          7.4041              3.8655"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,34 +942,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_1.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.983048%\n",
-      "Mean Absolute Error: 0.894400\n",
-      "Mean Squared Error: 0.000035\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -974,18 +958,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.156888%\n",
-      "Mean Absolute Error: 11.324528\n",
-      "Mean Squared Error: 0.645119\n"
+      "Explained Variance Score: 99.983048%\n",
+      "Mean Absolute Error: 0.894400\n",
+      "Mean Squared Error: 0.000035\n"
      ]
     }
    ],
    "source": [
-    "# Max Deflection Outcome\n",
+    "# Fequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 0)"
    ]
   },
   {
@@ -997,95 +979,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 64.810115%\n",
-      "Mean Absolute Error: 5.792947\n",
-      "Mean Squared Error: 0.566364\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Average Defelction Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,2], test_Y[:,2])))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Mode 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_res4 = model4.predict(test_X)\n",
-    "test_pred_y_mode_2 = get_output(test_res4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert test_pred_y_mode_2.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.982764%\n",
-      "Mean Absolute Error: 0.907481\n",
-      "Mean Squared Error: 0.000037\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,0], test_Y[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 66.158463%\n",
-      "Mean Absolute Error: 11.327694\n",
-      "Mean Squared Error: 0.645375\n"
+      "Explained Variance Score: 66.156888%\n",
+      "Mean Absolute Error: 11.324528\n",
+      "Mean Squared Error: 0.645119\n"
      ]
     }
    ],
    "source": [
     "# Max Deflection Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1101,9 +1009,96 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mode 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_res4 = model4.predict(test_X)\n",
+    "test_pred_y_mode_2 = get_output(test_res4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert test_pred_y_mode_2.shape == test_Y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 99.982764%\n",
+      "Mean Absolute Error: 0.907481\n",
+      "Mean Squared Error: 0.000037\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fequency Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_2, test_Y, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 66.158463%\n",
+      "Mean Absolute Error: 11.327694\n",
+      "Mean Squared Error: 0.645375\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_2, test_Y, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 64.810115%\n",
+      "Mean Absolute Error: 5.792947\n",
+      "Mean Squared Error: 0.566364\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Average Defelction Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_2, test_Y, 2)"
    ]
   }
  ],
