Random Forest Updated

--- a/Data Analysis/Random Forest.ipynb
+++ b/Data Analysis/Random Forest.ipynb
@@ -136,12 +136,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# Utility"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(pred, true, outcome):\n",
+    "    print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(pred[:,outcome], true[:,outcome])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +190,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +307,7 @@
        " 'warm_start': False}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +368,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +388,7 @@
        "{'bootstrap': True, 'criterion': 'mse'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +428,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +448,7 @@
        "{'bootstrap': True, 'criterion': 'mae'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +488,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +508,7 @@
        "{'bootstrap': True, 'criterion': 'mae'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,14 +557,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.993408%\n",
+      "Explained Variance Score: 99.993408%\n",
       "Mean Absolute Error: 0.633562\n",
       "Mean Squared Error: 0.000014\n"
      ]
@@ -554,32 +573,7 @@
    "source": [
     "# Frequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.919311%\n",
-      "Mean Absolute Error: 0.049355\n",
-      "Mean Squared Error: 0.000034\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Max Deflection Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode1, y_test, 0)"
    ]
   },
   {
@@ -591,7 +585,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 74.280940%\n",
+      "Explained Variance Score: 99.919311%\n",
+      "Mean Absolute Error: 0.049355\n",
+      "Mean Squared Error: 0.000034\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode1, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 74.280940%\n",
       "Mean Absolute Error: 0.287144\n",
       "Mean Squared Error: 0.001366\n"
      ]
@@ -600,9 +615,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode1, y_test, 2)"
    ]
   },
   {
@@ -621,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -728,7 +741,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,14 +777,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.978876%\n",
+      "Explained Variance Score: 99.978876%\n",
       "Mean Absolute Error: 1.369257\n",
       "Mean Squared Error: 0.000042\n"
      ]
@@ -780,32 +793,7 @@
    "source": [
     "# Requency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.893576%\n",
-      "Mean Absolute Error: 0.062737\n",
-      "Mean Squared Error: 0.000045\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Max Deflection Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode2, y_test, 0)"
    ]
   },
   {
@@ -817,7 +805,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 74.712411%\n",
+      "Explained Variance Score: 99.893576%\n",
+      "Mean Absolute Error: 0.062737\n",
+      "Mean Squared Error: 0.000045\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode2, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 74.712411%\n",
       "Mean Absolute Error: 0.287447\n",
       "Mean Squared Error: 0.001376\n"
      ]
@@ -826,9 +835,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode2, y_test, 2)"
    ]
   },
   {
@@ -842,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +946,7 @@
        "4    0.5  63  510     5    468.260          7.4041              3.8655"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,34 +990,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_1.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.982172%\n",
-      "Mean Absolute Error: 0.827799\n",
-      "Mean Squared Error: 0.000035\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -1022,18 +1006,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.147266%\n",
-      "Mean Absolute Error: 11.315392\n",
-      "Mean Squared Error: 0.644378\n"
+      "Explained Variance Score: 99.982172%\n",
+      "Mean Absolute Error: 0.827799\n",
+      "Mean Squared Error: 0.000035\n"
      ]
     }
    ],
    "source": [
-    "# Max Deflection Outcome\n",
+    "# Fequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 0)"
    ]
   },
   {
@@ -1045,7 +1027,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 63.084891%\n",
+      "Explained Variance Score: 66.147266%\n",
+      "Mean Absolute Error: 11.315392\n",
+      "Mean Squared Error: 0.644378\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_1, test_Y, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 63.084891%\n",
       "Mean Absolute Error: 5.796653\n",
       "Mean Squared Error: 0.568188\n"
      ]
@@ -1054,9 +1057,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 2)"
    ]
   },
   {
@@ -1068,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,34 +1079,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_2.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.974672%\n",
-      "Mean Absolute Error: 1.406639\n",
-      "Mean Squared Error: 0.000050\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -1117,7 +1095,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.164433%\n",
+      "Explained Variance Score: 99.974672%\n",
+      "Mean Absolute Error: 1.406639\n",
+      "Mean Squared Error: 0.000050\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fequency Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_2, test_Y, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 66.164433%\n",
       "Mean Absolute Error: 11.325124\n",
       "Mean Squared Error: 0.645201\n"
      ]
@@ -1126,14 +1125,12 @@
    "source": [
     "# Max Deflection Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_2, test_Y, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1149,17 +1146,8 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_2, test_Y, 2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
